[package]
name = "baedeker"
version = "0.1.0"
edition = "2021"
description = "Substrate network orchestration framework"
license = "MIT"


[dependencies]
bip39 = { version = "2.0.0", features = ["rand"] }
chainql-core = { git = "https://github.com/UniqueNetwork/chainql.git" }
clap = { version = "4.5.4", features = ["derive"] }
hex = "0.4.3"
jrsonnet-cli = { version = "0.5.0-pre95", features = ["exp-preserve-order", "exp-bigint", "exp-null-coaelse"] }
jrsonnet-evaluator = { version = "0.5.0-pre95", features = ["exp-preserve-order", "exp-object-iteration", "exp-destruct", "exp-bigint", "exp-null-coaelse"] }
jrsonnet-gcmodule = "0.3.6"
jrsonnet-stdlib = { version = "0.5.0-pre95", features = ["exp-preserve-order", "exp-bigint", "exp-null-coaelse"] }
libp2p = { version = "0.53.2", features = ["ed25519", "identify"] }
parity-scale-codec = "3.6.9"
pathdiff = "0.2.1"
rand = "0.8.5"
sc-executor = "0.36.0"
serde_json = "1.0.115"
sp-core = { version = "32.0.0", features = ["std"] }
sp-io = "34.0.0"
sp-maybe-compressed-blob = "11.0.0"
sp-state-machine = "0.39.0"
tempfile = "3.10.1"
thiserror = "1.0.58"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.release]
strip = true
opt-level = "s"
panic = "abort"
lto = "thin"
